fix: Backup Entity @Enumerated Annotation 추가, BackupMapper target 수정, BackupRepository JPQL문 오류 수정, 커서페이지네이션 오류 수정