@@ -16,8 +16,8 @@ import com.ohgiraffers.hrbank.repository.BackupRepository;
 import com.ohgiraffers.hrbank.repository.ChangeLogRepository;
 import com.ohgiraffers.hrbank.repository.EmployeeRepository;
 import com.ohgiraffers.hrbank.repository.FileRepository;
-import com.ohgiraffers.hrbank.storage.FileStorage;
 import com.ohgiraffers.hrbank.service.BackupService;
+import com.ohgiraffers.hrbank.storage.FileStorage;
 import jakarta.servlet.http.HttpServletRequest;
 import java.io.BufferedWriter;
 import java.io.IOException;
@@ -30,8 +30,8 @@ import java.time.Instant;
 import java.util.Comparator;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.Optional;
 import java.util.TimeZone;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
@@ -72,23 +72,25 @@ public class BasicBackupService implements BackupService {
 
 
         // 2. size + 1개 조회로 hasNext 판단
+        String worker = null;
+        if (backupCursorPageRequest.worker() != null && !backupCursorPageRequest.worker().isBlank()) {
+            worker = "%" + backupCursorPageRequest.worker() + "%";
+        }
         List<BackupDto> content;
         if(backupCursorPageRequest.cursor()==null){
-            content = backupRepository.findAllByCursor(
-                    backupCursorPageRequest.worker(),
+            content = backupRepository.findAllWithoutCursor(
+                    worker,
                     backupCursorPageRequest.status(),
                     backupCursorPageRequest.startedAtFrom(),
                     backupCursorPageRequest.startedAtTo(),
-                    null,
-                    backupCursorPageRequest.idAfter(),
                     pageable
                 ).stream()
                 .map(backupMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
         }
         else{
-            content = backupRepository.findAllByCursor(
-                    backupCursorPageRequest.worker(),
+            content = backupRepository.findAllWithCursor(
+                    worker,
                     backupCursorPageRequest.status(),
                     backupCursorPageRequest.startedAtFrom(),
                     backupCursorPageRequest.startedAtTo(),
@@ -97,7 +99,7 @@ public class BasicBackupService implements BackupService {
                     pageable
                 ).stream()
                 .map(backupMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
         }
 
         boolean hasNext = content.size() > backupCursorPageRequest.size();
@@ -118,11 +120,13 @@ public class BasicBackupService implements BackupService {
             .orElse(null);
 
         // 5. size 찾기
-        int size = content.size();
+        int size = content.size()-1;
 
         // 6. totalElements 찾기
         Long totalElements = backupRepository.count();
 
+        // 7. 마지막 행 제거
+        content.remove(content.size() - 1);
 
         return new CursorPageResponseBackupDto(content,nextCursor,nextIdAfter,size,totalElements,hasNext);
     }
